<package format="2">
  <name>range_msgs</name>
  <version>1.1.2</version>
  <description>
     Messages for point-to-point range-only devices.
  </description>
  <maintainer email="felramfab@gmail.com">Felipe R. Fabresse (University of Seville)</maintainer>
  <maintainer email="fcaballero@us.es">Fernando Caballero (University of Seville)</maintainer>
  <license>BSD</license>

  <author>Felipe Ramón Fabresse</author>
  <author>Alfredo Vázquez Reyes</author>
  <author>Fernando Caballero Benitez</author>
  <url type="repository">https://github.com/robotics-upo/range_msgs.git</url>
  <url type="bugtracker">https://github.com/robotics-upo/range_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
</package>


